# dataAgent4DataDev

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  pyspark_driver.py  spark_submit.sh  t_eci_company_4_dwi.sql
compose/: .env.example  README.md  docker-compose.ds.yml  docker-compose.yml
compose/hive-conf/: hive-site.xml
compose/hive-init/: run.sh
contracts/: runtime_variables.yaml
openspec/: config.yaml
openspec/changes/data-dev-platform/: .openspec.yaml  architecture.md  data-flow.md  design.md  proposal.md  runtime-flow.md  tasks.md
openspec/changes/data-dev-platform/specs/command-generation/: spec.md
openspec/changes/data-dev-platform/specs/dolphinscheduler-integration/: spec.md
openspec/changes/data-dev-platform/specs/multi-tenant-isolation/: spec.md
openspec/changes/data-dev-platform/specs/observability/: spec.md
openspec/changes/data-dev-platform/specs/pyspark-driver/: spec.md
openspec/schemas/architecture-driven/: schema.yaml
openspec/schemas/architecture-driven/templates/: architecture.md  data-flow.md  design.md  proposal.md  runtime-flow.md  spec.md  tasks.md
pyspark_driver_pkg/: command_generator.py  driver.py  renderer.py  resolver.py  snapshot.py  sql_splitter.py  variable_catalog.py
tests/: test_cli_e2e.py  test_command_generator.py  test_command_generator_fuzz.py  test_compose_e2e.py  test_driver_integration.py  test_historical_regression.py  test_renderer_basic.py  test_renderer_edges.py  test_resolver.py  test_snapshot_service.py  test_spark_submit_sh.py  test_variable_catalog.py  test_webhdfs_backend.py
(+7 files in other folders)
