[project]
name = "pyspark-driver"
version = "0.2.0"
description = "Spark SQL driver for data-dev-platform; runs as a stand-alone script under YARN cluster mode."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "httpx>=0.27",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "hypothesis>=6.100",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
markers = [
  "compose: integration tests that require the local docker compose stack (`make up`).",
]
